--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    height: 60px;
+    height: 64px;
     width: 100%;
     background-color: aquamarine;
     
@@ -10,6 +10,7 @@ header {
         justify-content: space-evenly ;
         color: black;
         list-style-type: none;
+        line-height: 64px;
 
         li {
             color: black;
@@ -17,7 +18,15 @@ header {
 
             a {
                 text-decoration: none;
+
+                img {
+                    border-radius: 50%;
+                    }
             }
         }
     }
+}
+
+body{
+    margin: 0;
 }
