Ajustement du logo de la page d'accueil

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ header {
 
                 img {
                     border-radius: 50%;
-                    }
+                    height: 54px;
+                }
             }
         }
     }
