Ajustement du logo de la page d'accueil

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header {
                 img {
                     border-radius: 50%;
                     height: 54px;
+                    line-height: 64px;
                 }
             }
         }
