--- a/style.css
+++ b/style.css
@@ -11,19 +11,19 @@ header {
         color: black;
         list-style-type: none;
         align-items: center ;
+        height: 100% ;
         margin: 0;
         padding: 0;
 
         li {
             color: black;
-            font-size: 0.85rem;
 
             a {
                 text-decoration: none;
 
                 img {
                     border-radius: 50%;
-                    height: 54px;
+                    height: 56px;
                 }
             }
         }
